# unitire-rs

./: AGENTS.md  Cargo.toml  LICENSE  PUBLISH-TODO.md  README.md  TODO-CODEX.md
benches/: core_trie_bench.rs
docs/knowledge/zensical/: README.md
docs/knowledge/zensical/evidence/project/: worklog.json  worklog.md
docs/knowledge/zensical/maps/: documentation-protocol.md
src/: codec_orchid.rs  codec_rskip107.rs  core_trie.rs  hash.rs  lib.rs  node_ref.rs  storage_keys_packed.rs  store_adapter.rs  varint.rs
src/core_api/: mod.rs
src/next/: arena.rs  core_trie.rs  engine.rs  hash_cache.rs  hashing.rs  iter.rs  load.rs  mod.rs  mutation.rs  node.rs  node_arena.rs  path_bits.rs  persistence.rs  storage_iteration_cache.rs
src/path/: mod.rs  shared_path_serializer.rs
tests/: parity_legacy_next.rs
