[package]
name = "unitrie-rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Reusable Rust core for Rootstock Unitrie (JNI-free)"
repository = "https://github.com/fedejinich/unitire-rs"
readme = "README.md"

[dependencies]
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "core_trie_bench"
harness = false
